--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
     <nav id="navbar">
       <ul>
        <li><a href='#'>Homepage</a></li>
-       <li><a href='#'>About Toyota</a></li>
-       <li><a href='#'>Contact Bill</a></li>
+       <li><a href='about.html'>About Toyota</a></li>
+       <li><a href='contact.html'>Contact Bill</a></li>
        <li><a href='#'>Terms of Service</a></li>
      </ul>
     </nav>
