--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,20 @@
     <nav id="navbar">
       <ul>
        <li><a href='#'>Homepage</a></li>
-       <li><a href='#'>About Toyota</a></li>
-       <li><a href='#'>Contact Bill</a></li>
+       <li><a href='about.html'>About Toyota</a></li>
+       <li><a href='contact.html'>Contact Bill</a></li>
        <li><a href='#'>Terms of Service</a></li>
      </ul>
     </nav>
+    <section class="contact-section">
     <h1>Contact Bill</h1>
+    <form class="contact-form">
+     <label>Name</label><br>
+     <input type="text"><br>
+     <textarea rows="5" cols="25" placeholder="What would you like to tell Bill?"></textarea><br>
+     <input type="submit" value="Send Message">
+    </form>
+
+    </section>
   </body>
 </html>
